fix .toList() error in AdminCreateMonsterActivity